Adapt how photos are presented (no caption is shown) and use indeximage instead of tag image in markdown files.

--- a/templates/article.html
+++ b/templates/article.html
@@ -50,16 +50,16 @@ $("article img").each(function() {
         "margin": "0 auto"
       });
     }
-    var imageCaption = $(this).attr("alt");
-    if (imageCaption != '') {
-      // display image caption on top of image
-      imgWidth = imgWidth - 5;
-      var positionTop = imgHeight - 26;
-      $("<span class='img-caption'>" + imageCaption + "</span>").css({
-          "top": positionTop + "px",
-          "width": imgWidth + "px"
-      }).insertAfter(this);
-    }
+    //var imageCaption = $(this).attr("alt");
+    //if (imageCaption != '') {
+    //  // display image caption on top of image
+    //  imgWidth = imgWidth - 5;
+    //  var positionTop = imgHeight - 26;
+    //  $("<span class='img-caption'>" + imageCaption + "</span>").css({
+    //      "top": positionTop + "px",
+    //      "width": imgWidth + "px"
+    //  }).insertAfter(this);
+    //}
   });
   if (this.complete) $(this).trigger("load");
 });
