--- a/templates/article_header.html
+++ b/templates/article_header.html
@@ -2,7 +2,7 @@
         <h2><a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark">{{ article.title }}</a></h2>
         {% if article.authors %}
         <address class="author">
-            By {% for author in article.authors %}
+            Von {% for author in article.authors %}
             <a href="{{ SITEURL }}/{{ author.url }}">{{ author }}</a>
             {% endfor %}
         </address>
