--- a/templates/index.html
+++ b/templates/index.html
@@ -42,10 +42,10 @@
 {% endif %}
 
 {% endblock content %}
-{% block script_hooks %}
+<!-- {% block script_hooks %}
 <script>
 $(function () {
     $("article img:first-child").addClass("featured");
 });
 </script>
-{% endblock %}
+{% endblock %} -->
