--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,13 @@
 {% for article in articles_page.object_list %}
 <article id="{{ article.slug }}" class="box post post-excerpt"{% if article.lang and DEFAULT_LANG != article.lang %} lang="{{article.lang}}"{% endif %}>
     {% include 'article_header.html' %}
+    
     {% if article.indeximage %}
     <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark"><img class="featured" src="{{ article.indeximage }}" alt="" {% if article.imageposition %}style="object-position: 50% {{article.imageposition}}" {% endif %}/></a>
     {% endif %}
+
     {% if article.summary %}
-    {{ article.summary }}
+    <p>{{article.summary}}</p>
     {% if not article.indeximage and article.imageposition %}
     <script>
         // http://codepen.io/chrisnager/pen/XJRRwo?editors=110
@@ -26,7 +28,7 @@
     {% endif %}
 
     {% if article.summary != article.content %}
-    <div><a href="{{ SITEURL }}/{{ article.url }}">Read more</a></div>
+    <div><a href="{{ SITEURL }}/{{ article.url }}">Weiterlesen</a></div>
     {% endif %}
     {% endif %}
 </article>
