--- a/templates/base.html
+++ b/templates/base.html
@@ -244,16 +244,26 @@
             </section>
             {% endif %}
 
+            
+
+            
             <!-- Copyright -->
             <ul id="copyright">
                 <li>&copy; {{ COPYRIGHT }}</li>
                 <li>Powered by <a href="http://getpelican.com/">Pelican</a></li>
                 <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
             </ul>
+            
+            <ul id="zaehler"> <p>Wir hatten heute schon <span class="BZheute"></span> Besucher.
+                <span class="BZonline"></span> davon sind gerade online.
+                Gestern waren es <span class="BZgestern"></span>!
+                Und seit dem <span class="BZseit"></span>
+                waren es ganze <span class="BZheute"></span>.</p></ul>
 
         </div>
-
+        
         <!-- Scripts -->
+        <script language="JavaScript" src="https://www.besucherzaehler-kostenlos.de/js/counter.js.php?count=1&id=rohlnet.deusa2022&start=0&design=6"></script>
         <script src="{{ SITEURL }}/theme/assets/js/jquery.min.js"></script>
         <script src="{{ SITEURL }}/theme/assets/js/skel.min.js"></script>
         <script src="{{ SITEURL }}/theme/assets/js/util.js"></script>
