Repaired categories links to images and counter.

--- a/templates/base.html
+++ b/templates/base.html
@@ -258,7 +258,7 @@
                 <span class="BZonline"></span> davon sind gerade online.
                 Gestern waren es <span class="BZgestern"></span>!
                 Und seit dem <span class="BZseit"></span>
-                waren es ganze <span class="BZheute"></span>.</p></ul>
+                waren es ganze <span class="BZgesamt"></span>.</p></ul>
 
         </div>
         
