--- a/templates/base.html
+++ b/templates/base.html
@@ -299,6 +299,8 @@
         </script>
         {% endif %}
 
+        <script src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/gpxviewer/GPX2GM.js"></script>
+
 
     </body>
 </html>
