--- a/templates/article.html
+++ b/templates/article.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
+
 {% block title %}{{ article.title|striptags }}{% endblock %}
+
 {% block head %}
 {{ super() }}
 {% if article.description %}
@@ -10,36 +12,31 @@
 {% endfor %}
 {% endblock %}
 
+
 {% block content %}
 <article class="box post post-excerpt" {% if article.lang and DEFAULT_LANG !=article.lang %} lang="{{article.lang}}" {%
   endif %}>
   
   {% include 'article_header.html' %}
+
+  <div class="info">
+    <!--
+            Note: The date should be formatted exactly as it's shown below. In particular, the
+            "least significant" characters of the month should be encapsulated in a <span>
+            element to denote what gets dropped in 1200px mode (eg. the "uary" in "January").
+            Oh, and if you don't need a date for a particular page or post you can simply delete
+            the entire "date" element.
+          -->
+    <time class="published" datetime="{{ article.date.isoformat() }}">
+        <span class="date"><span class="month">{{ article.date.strftime('%b') }}</span> <span class="day">{{
+                article.date.strftime('%d') }}</span><span class="year"><span>, </span>{{ article.date.strftime('%Y')
+                }}</span></span>
+    </time>
+  </div>
   
   {% include 'article_tracks.html' %}
 
   {{ article.content }}
-
-  {% if DISQUS_SITENAME and SITEURL and article.status != "draft" %}
-  <h3>Comments</h3>
-  <div id="disqus_thread"></div>
-  <script>
-    var disqus_config = function () {
-      this.page.url = '{{ SITEURL }}/{{ article.url }}';
-      this.page.identifier = '{{ article.url }}';
-    };
-    (function () {
-      var d = document, s = d.createElement('script');
-      s.src = '//{{ DISQUS_SITENAME }}.disqus.com/embed.js';
-      s.setAttribute('data-timestamp', +new Date());
-      s.async = true;
-      (d.head || d.body).appendChild(s);
-    })();
-  </script>
-  <script id="dsq-count-scr" src="//{{ DISQUS_SITENAME }}.disqus.com/count.js" async></script>
-  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments
-      powered by Disqus.</a></noscript>
-  {% endif %}
 
 </article>
 
@@ -56,6 +53,5 @@
 </div>
 {% endif %}
 <!-- <<<< End <<<<< PHOTO plugin: article gallery <<<<<<<<< -->
-
 
 {% endblock %}
