--- a/templates/index.html
+++ b/templates/index.html
@@ -5,38 +5,23 @@
         <meta name="google-site-verification" content="{{ GOOGLE_SITE_VERIFICATION }}" />
 {% endif %}
 {% endblock %}
+
 {% block content %}
+
 {% if articles %}
 {% for article in articles_page.object_list %}
 <article id="{{ article.slug }}" class="box post post-excerpt"{% if article.lang and DEFAULT_LANG != article.lang %} lang="{{article.lang}}"{% endif %}>
-    {% include 'article_header.html' %}
     
-    {% if article.indeximage %}
-    <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark"><img class="featured" src="{{SITEURL}}/{{ article.indeximage }}" alt="" {% if article.imageposition %}style="object-position: 50% {{article.imageposition}}" {% endif %}/></a>
-    {% endif %}
+    {% include 'article_header.html' %}
 
-    {% if article.summary %}
-    <p>{{article.summary}}</p>
-    {% if not article.indeximage and article.imageposition %}
-    <script>
-        // http://codepen.io/chrisnager/pen/XJRRwo?editors=110
-        // We use vanilla js here because jQuery is not loaded yet
-        document.addEventListener("DOMContentLoaded", function() {
-            $("article#{{ article.slug }} img:first-child").css("object-position", "50% {{article.imageposition}}");
-        });
-    </script>
-    {% endif %}
-
+    {% include 'article_indeximage.html' %}
+    
     {% if article.summary != article.content %}
     <div><a href="{{ SITEURL }}/{{ article.url }}">Weiterlesen</a></div>
-    {% endif %}
     {% endif %}
 </article>
 {% endfor %}
 
-{% if DISQUS_SITENAME and SITEURL %}
-<script id="dsq-count-scr" src="//{{ DISQUS_SITENAME }}.disqus.com/count.js" async></script>
-{% endif %}
 {% endif %}
 
 {% if articles_page.has_other_pages() %}
