--- a/templates/article.html
+++ b/templates/article.html
@@ -3,55 +3,36 @@
 {% block title %}{{ article.title|striptags }}{% endblock %}
 
 {% block head %}
+
 {{ super() }}
+
 {% if article.description %}
 <meta name="description" content="{{article.description}}" />
 {% endif %}
+
 {% for tag in article.tags %}
 <meta name="tags" content="{{tag}}" />
 {% endfor %}
+
 {% endblock %}
 
 
 {% block content %}
 <article class="box post post-excerpt" {% if article.lang and DEFAULT_LANG !=article.lang %} lang="{{article.lang}}" {%
   endif %}>
-  
+
   {% include 'article_header.html' %}
 
-  <div class="info">
-    <!--
-            Note: The date should be formatted exactly as it's shown below. In particular, the
-            "least significant" characters of the month should be encapsulated in a <span>
-            element to denote what gets dropped in 1200px mode (eg. the "uary" in "January").
-            Oh, and if you don't need a date for a particular page or post you can simply delete
-            the entire "date" element.
-          -->
-    <time class="published" datetime="{{ article.date.isoformat() }}">
-        <span class="date"><span class="month">{{ article.date.strftime('%b') }}</span> <span class="day">{{
-                article.date.strftime('%d') }}</span><span class="year"><span>, </span>{{ article.date.strftime('%Y')
-                }}</span></span>
-    </time>
-  </div>
-  
+  {% include 'article_date.html' %}
+
   {% include 'article_tracks.html' %}
 
   {{ article.content }}
 
+  {% include 'article_video.html' %}
+
 </article>
 
-<!-- >>>> Start >>>>> PHOTO plugin: article gallery >>>>>>>>> -->
-{% if article.photo_gallery %}
-<div class="gallery">
-  {% for title, gallery in article.photo_gallery %}
-  <h1>{{ title }}</h1>
-  {% for name, photo, thumb, exif, caption in gallery %}
-  <a href="{{ SITEURL }}/{{ photo }}" title="{{ name }}" exif="{{ exif }}" caption="{{ caption }}"><img
-      src="{{ SITEURL }}/{{ thumb }}"></a>
-  {% endfor %}
-  {% endfor %}
-</div>
-{% endif %}
-<!-- <<<< End <<<<< PHOTO plugin: article gallery <<<<<<<<< -->
+{% include 'article_gallery.html' %}
 
 {% endblock %}
