--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -1908,17 +1908,21 @@ article span.tag:last-child:after {
 article .centeredvideo {
   margin: auto;
   text-align: center;
-  font-size: 50px
+  font-size: 50px;
+  padding-top: 10px;
+  padding-bottom: 20px;
 }
 
 video {
-  max-width: 75%;
+  max-width: 100%;
+  max-height: 600px;
 }
 
 
 article img {
   display: block;
   max-width: 100%;
+  max-height: 600px;
 }
 
 article img.featured {
