--- a/templates/article_video.html
+++ b/templates/article_video.html
@@ -1,8 +1,8 @@
 {% if article.video %}
+
 <div  class="centeredvideo">
-    <p>Video</p>
     <video  controls  onloadstart="this.volume=0.2">
-        <source src="{{SITEURL}}/{{article.video}}" type="video/mp4">
+        <source src="{{VIDEO_DEFAULT_URL}}/{{article.video}}" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 </div>
